--- a/index.html
+++ b/index.html
@@ -3,68 +3,95 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Pi Exchange | Live Crypto</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PI Exchange | STPL</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f9f9f9; color: #333; }
-    header, footer { background-color: #2c3e50; color: white; text-align: center; padding: 1em; }
-    nav { background-color: #34495e; text-align: center; padding: 0.5em; }
-    nav a { color: white; margin: 0 15px; text-decoration: none; }
-    .container { padding: 2em; max-width: 960px; margin: auto; }
-    .product { background: white; margin-bottom: 1em; padding: 1em; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.05); }
-    .prices { font-size: 1.2em; background: #eaf2f8; padding: 1em; border-radius: 8px; margin-bottom: 1em; }
-    @media (max-width: 600px) {
-      nav a { display: block; margin: 10px 0; }
-    }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    body { font-family: 'Inter', sans-serif; background: #f4f6f8; color: #333; line-height: 1.6; }
+    header { background-color: #001f3f; color: #fff; padding: 20px; text-align: center; }
+    section { padding: 20px; max-width: 1000px; margin: auto; }
+    .product, .form-section { background: white; padding: 20px; margin-bottom: 20px; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.05); }
+    h2, h3 { margin-bottom: 10px; }
+    ul { padding-left: 20px; }
+    .live-prices { display: flex; flex-wrap: wrap; gap: 15px; margin-bottom: 20px; justify-content: center; }
+    .price-card { flex: 1 1 150px; background: #e3f2fd; padding: 15px; border-radius: 8px; text-align: center; }
+    form { display: flex; flex-direction: column; }
+    input, textarea { margin-bottom: 10px; padding: 10px; border: 1px solid #ccc; border-radius: 5px; }
+    button { background: #001f3f; color: white; padding: 10px; border: none; border-radius: 5px; cursor: pointer; }
+    footer { text-align: center; padding: 20px; background: #001f3f; color: white; }
+    @media(max-width: 600px) { .live-prices { flex-direction: column; } }
   </style>
 </head>
 <body>
   <header>
-    <h1>STPL – SJ Technology Private Limited</h1>
-    <h2>Pi Exchange</h2>
+    <h1>STPL – SJ TECHNOLOGY PRIVATE LIMITED</h1>
+    <h2>PI EXCHANGE</h2>
   </header>
-  <nav>
-    <a href="#">Home</a>
-    <a href="#">Products</a>
-    <a href="#">Contact</a>
-  </nav>
-  <div class="container">
-    <div class="prices">
-      <h3>Live Crypto Prices</h3>
-      <p>Bitcoin (BTC): <span id="btc-price">Loading...</span></p>
-      <p>Ethereum (ETH): <span id="eth-price">Loading...</span></p>
-      <p>Pi Network (PI): <span id="pi-price">Loading...</span></p>
+
+  <section>
+    <div class="live-prices">
+      <div class="price-card"><div>Bitcoin (BTC)</div><div class="price" id="btc-price">Loading...</div></div>
+      <div class="price-card"><div>Ethereum (ETH)</div><div class="price" id="eth-price">Loading...</div></div>
+      <div class="price-card"><div>Pi Coin (PI)</div><div class="price" id="pi-price">Loading...</div></div>
     </div>
-    <section class="product">
-      <h3>Pi Exchange Platform</h3>
-      <p>Trade cryptocurrencies and fiat with real-time tracking, KYC, and high security.</p>
-    </section>
-    <section class="product">
+
+    <div class="product">
+      <h3>About Us</h3>
+      <p>STPL is a fintech leader focused on bridging digital and traditional finance. PI EXCHANGE allows secure and seamless cryptocurrency and fiat currency trading across devices.</p>
+    </div>
+
+    <div class="product">
+      <h3>Our Products</h3>
+      <ul>
+        <li>Pi Exchange Platform</li>
+        <li>Pi Wallet</li>
+        <li>Currency Conversion Tools</li>
+        <li>API for Businesses</li>
+        <li>Institutional Services</li>
+      </ul>
+    </div>
+
+    <div class="form-section">
       <h3>Contact Us</h3>
-      <p>Email: piexchange.info@gmail.com<br>Phone: +91 6294124782</p>
-    </section>
-  </div>
+      <form action="https://formspree.io/f/xwkgykqg" method="POST">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <textarea name="message" placeholder="Your Message" rows="4" required></textarea>
+        <button type="submit">Send</button>
+      </form>
+    </div>
+
+    <div class="form-section">
+      <h3>Login</h3>
+      <form onsubmit="alert('This is a placeholder. Add Firebase for real login.'); return false;">
+        <input type="email" placeholder="Email" required>
+        <input type="password" placeholder="Password" required>
+        <button type="submit">Login</button>
+      </form>
+    </div>
+  </section>
+
   <footer>
-    <p>&copy; 2025 STPL – Pi Exchange</p>
+    &copy; 2025 STPL – SJ TECHNOLOGY PRIVATE LIMITED. All rights reserved.
   </footer>
 
   <script>
     async function fetchPrices() {
       try {
-        const res = await fetch("https://api.coingecko.com/api/v3/simple/price?ids=bitcoin,ethereum,pi-network&vs_currencies=usd");
-        const data = await res.json();
-        document.getElementById("btc-price").textContent = "$" + data.bitcoin.usd.toLocaleString();
-        document.getElementById("eth-price").textContent = "$" + data.ethereum.usd.toLocaleString();
-        document.getElementById("pi-price").textContent = data['pi-network']?.usd ? "$" + data['pi-network'].usd.toLocaleString() : "Not listed";
-      } catch (e) {
-        document.getElementById("btc-price").textContent = "Error loading";
-        document.getElementById("eth-price").textContent = "Error loading";
-        document.getElementById("pi-price").textContent = "Error loading";
+        const response = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=bitcoin,ethereum,pinetwork&vs_currencies=usd');
+        const data = await response.json();
+        document.getElementById('btc-price').textContent = `$${data.bitcoin.usd.toLocaleString()}`;
+        document.getElementById('eth-price').textContent = `$${data.ethereum.usd.toLocaleString()}`;
+        document.getElementById('pi-price').textContent = data.pinetwork ? `$${data.pinetwork.usd.toLocaleString()}` : 'N/A';
+      } catch (err) {
+        document.getElementById('btc-price').textContent = 'Unavailable';
+        document.getElementById('eth-price').textContent = 'Unavailable';
+        document.getElementById('pi-price').textContent = 'Unavailable';
       }
     }
-
     fetchPrices();
-    setInterval(fetchPrices, 60000); // update every 60 seconds
+    setInterval(fetchPrices, 60000);
   </script>
 </body>
 </html>
