--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Pi Exchange | Live Crypto</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Pi Exchange | STPL</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f9f9f9; color: #333; }
-    header, footer { background-color: #2c3e50; color: white; text-align: center; padding: 1em; }
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f4f4f4; color: #333; }
+    header { background-color: #2c3e50; color: white; padding: 1em 0; text-align: center; }
     nav { background-color: #34495e; text-align: center; padding: 0.5em; }
     nav a { color: white; margin: 0 15px; text-decoration: none; }
     .container { padding: 2em; max-width: 960px; margin: auto; }
+    footer { background-color: #2c3e50; color: white; text-align: center; padding: 1em 0; position: relative; bottom: 0; width: 100%; }
     .product { background: white; margin-bottom: 1em; padding: 1em; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.05); }
-    .prices { font-size: 1.2em; background: #eaf2f8; padding: 1em; border-radius: 8px; margin-bottom: 1em; }
     @media (max-width: 600px) {
       nav a { display: block; margin: 10px 0; }
     }
@@ -26,45 +26,39 @@
   <nav>
     <a href="#">Home</a>
     <a href="#">Products</a>
+    <a href="#">Services</a>
     <a href="#">Contact</a>
   </nav>
   <div class="container">
-    <div class="prices">
-      <h3>Live Crypto Prices</h3>
-      <p>Bitcoin (BTC): <span id="btc-price">Loading...</span></p>
-      <p>Ethereum (ETH): <span id="eth-price">Loading...</span></p>
-      <p>Pi Network (PI): <span id="pi-price">Loading...</span></p>
-    </div>
     <section class="product">
       <h3>Pi Exchange Platform</h3>
-      <p>Trade cryptocurrencies and fiat with real-time tracking, KYC, and high security.</p>
+      <p>A powerful exchange for cryptocurrencies and fiat with real-time tracking, KYC, and high security.</p>
     </section>
     <section class="product">
+      <h3>Pi Wallet</h3>
+      <p>Secure digital wallet for storing and transacting in crypto, with biometric and key controls.</p>
+    </section>
+    <section class="product">
+      <h3>Currency Conversion Tools</h3>
+      <p>Instant conversion between crypto and fiat with competitive rates and transparent fees.</p>
+    </section>
+    <section class="product">
+      <h3>API for Businesses</h3>
+      <p>Integrate Pi Exchange into your platforms with robust APIs for real-time payments and conversions.</p>
+    </section>
+    <section class="product">
+      <h3>Institutional Services</h3>
+      <p>Tailored crypto asset solutions for institutions with bulk trading and white-label options.</p>
+    </section>
+    <section>
       <h3>Contact Us</h3>
-      <p>Email: piexchange.info@gmail.com<br>Phone: +91 6294124782</p>
+      <p>Email: piexchange.info@gmail.com</p>
+      <p>Phone: +91 6294124782</p>
+      <p>Address: Mahindra Vidyapeeth School, Chhoto Purulia, West Bengal 713140</p>
     </section>
   </div>
   <footer>
-    <p>&copy; 2025 STPL – Pi Exchange</p>
+    <p>&copy; 2025 STPL – Pi Exchange. All rights reserved.</p>
   </footer>
-
-  <script>
-    async function fetchPrices() {
-      try {
-        const res = await fetch("https://api.coingecko.com/api/v3/simple/price?ids=bitcoin,ethereum,pi-network&vs_currencies=usd");
-        const data = await res.json();
-        document.getElementById("btc-price").textContent = "$" + data.bitcoin.usd.toLocaleString();
-        document.getElementById("eth-price").textContent = "$" + data.ethereum.usd.toLocaleString();
-        document.getElementById("pi-price").textContent = data['pi-network']?.usd ? "$" + data['pi-network'].usd.toLocaleString() : "Not listed";
-      } catch (e) {
-        document.getElementById("btc-price").textContent = "Error loading";
-        document.getElementById("eth-price").textContent = "Error loading";
-        document.getElementById("pi-price").textContent = "Error loading";
-      }
-    }
-
-    fetchPrices();
-    setInterval(fetchPrices, 60000); // update every 60 seconds
-  </script>
 </body>
 </html>
